<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_bringup</name>
  <version>1.0.0</version>
  <description>Combined launch for YOLO detection + Llama behavior recognition</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>yolov11_tensorRT_ros2</exec_depend>
  <exec_depend>llama_behavior_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
