<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llama_behavior_ros2</name>
  <version>1.0.0</version>
  <description>Behavior recognition node using llama.cpp multimodal server</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>

  <build_depend>libcurl-dev</build_depend>
  <exec_depend>libcurl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
