<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov11_tensorRT_ros2</name>
  <version>1.0.0</version>
  <description>YOLOv11 TensorRT inference ROS2 node with CUDA postprocessing</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <build_depend>cuda</build_depend>
  <build_depend>tensorrt</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
